add filter_by_device_attribute_keys query parameter to selectables requests
