# docs/devicemanager_swagger.json
@@ -446,6 +446,12 @@
                         "in": "query"
                     },
                     {
+                        "type": "string",
+                        "description": "comma seperated list of attribute keys; result devices have these attributes (if one is given)",
+                        "name": "filter_devices_by_attr_keys",
+                        "in": "query"
+                    },
+                    {
                         "description": "criteria list",
                         "name": "message",
                         "in": "body",
@@ -575,6 +581,12 @@
                         "type": "string",
                         "description": "alternative to json and base64 if only one filter criteria is needed",
                         "name": "aspect_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "comma seperated list of attribute keys; result devices have these attributes (if one is given)",
+                        "name": "filter_devices_by_attr_keys",
                         "in": "query"
                     }
                 ],
@@ -863,6 +875,12 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/devicemodel.FilterCriteria"
+                    }
+                },
+                "filter_by_device_attribute_keys": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
                     }
                 },
                 "id": {
